MST-3340 new builder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>A3</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="shortcut icon" href="/images/circle.png" type="image/png">
+  <link rel="shortcut icon" href="/images/logo.svg" type="image/svg">
   <meta name="description" content="A3">
 </head>
 <body>
