--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
   <div id="app"></div>
 </body>
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oswald:400,700&amp;subset=cyrillic" rel="stylesheet">
 </html>
