MST-3365 boilerplate change, favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>A3</title>
+  <title>GORA - Мобильная и веб разработка</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="shortcut icon" href="/images/logo.svg" type="image/svg">
-  <meta name="description" content="A3">
+  <link rel="shortcut icon" href="/favicon.png" type="image/png">
+  <meta name="description" content="GORA - это разработка средних и крупных проектов под все популярные платформы: iOS, Android, Web. Основные направления нашей деятельности это разработка мобильных приложений и крупных порталов.">
 </head>
 <body>
   <div id="app"></div>
