--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>GORA - Мобильная и веб разработка</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta content="width=device-width,initial-scale=1, maximum-scale=1" name="viewport">
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <meta name="description" content="GORA - это разработка средних и крупных проектов под все популярные платформы: iOS, Android, Web. Основные направления нашей деятельности это разработка мобильных приложений и крупных порталов.">
+  <meta name="keywords" content="разработка мобильных приложений, спб, ios, android, development, sain-petersburg, gora studio, blockchain">
+  <link rel="apple-touch-icon" sizes="180x180" type="image/png" href="/preview-apple.png">
+  <link rel="icon" sizes="192x192" type="image/png" href="/preview.png">
 </head>
 <body>
   <div id="app"></div>
