--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <meta content="width=device-width,initial-scale=1, maximum-scale=1" name="viewport">
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <meta name="description" content="GORA - это разработка средних и крупных проектов под все популярные платформы: iOS, Android, Web. Основные направления нашей деятельности это разработка мобильных приложений и крупных порталов.">
+  <meta property="og:type" content="business.business">
+  <meta property="og:title" content="GORA - Mobile and Web development">
+  <meta property="og:url" content="https://gora.studio/">
+  <meta property="og:image" content="https://gora.studio/preview.png">
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta property="business:contact_data:street_address" content="Bolshoy prospect PS, 29, from 10:00 to 20:00">
   <meta name="keywords" content="разработка мобильных приложений, спб, ios, android, development, sain-petersburg, gora studio, blockchain">
-  <link rel="apple-touch-icon" sizes="180x180" type="image/png" href="/preview-apple.png">
-  <link rel="icon" sizes="192x192" type="image/png" href="/preview.png">
 </head>
 <body>
   <div id="app"></div>
